testsuite/tests/overloadedrecflds/should_fail/hasfieldfail01.stderr
[1 of 2] Compiling HasFieldFail01_A (.hs -> .o)
[2 of 2] Compiling Main             (.hs -> .o)

hasfieldfail01.hs:9:15: error:
    • No instance for (HasField "foo" T Int)
        arising from a use of ‘getField’
    • In the first argument of ‘print’, namely
        ‘(getField @"foo" (MkT 42) :: Int)’
      In the expression: print (getField @"foo" (MkT 42) :: Int)
      In an equation for ‘main’:
          main = print (getField @"foo" (MkT 42) :: Int)
